다이어리, 레시피 오류 수정
펫이름, 작성자 이름 출력 오류 수정함